--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <canvas id="petals-canvas"></canvas>
 
   <header>
-    <img src="my3.jpg">
+    <img src="public/my3.jpg">
   </header>
 
   <div class="description">
       <div class="avatar">
-        <img src="avatar.jpg" alt="Аватар Алены" />
+        <img src="public/avatar.jpg" alt="Аватар Алены" />
       </div>
       <h1>Алена Панасенко</h1>
       <p>QA-инженер с вниманием к деталям</p>
@@ -54,10 +54,10 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Алена Панасенко | В гармонии с качеством 🌸</p>
+      <p>&copy;2025 Алена Панасенко | В гармонии с качеством 🌸</p>
     </div>
   </footer>
 
-  <script src="my2.js"></script>
+  <script src="public/my2.jpg"></script>
 </body>
 </html>
